--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,7 +37,7 @@ jobs:
       
     - name: Pack
       working-directory: ${{github.workspace}}/build
-      run: cmake -E tar cJfv ../${{ matrix.config.artifact}} .
+      run: cmake -E tar cJfv ${{ matrix.config.artifact}} .
 
     - name: Upload
       uses: actions/upload-artifact@v1
