--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,10 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -37,7 +40,7 @@ jobs:
       
     - name: Pack
       working-directory: ${{github.workspace}}/build
-      run: cmake -E tar cJfv ${{ matrix.config.artifact}} .
+      run: cmake -E tar cJfv ${{matrix.config.artifact}} .
 
     - name: Upload
       uses: actions/upload-artifact@v1
