--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,10 +40,10 @@ jobs:
       
     - name: Pack
       working-directory: ${{github.workspace}}/build
-      run: cmake -E tar cJfv ${{matrix.config.artifact}} .
+      run: tar -czvf ${{matrix.config.artifact}}.tar.gz ${{matrix.config.artifact}}
 
     - name: Upload
       uses: actions/upload-artifact@v1
       with:
-        path: ./${{matrix.config.artifact}}
-        name: ${{matrix.config.artifact}}
+        path: ./${{matrix.config.artifact}}.tar.gz
+        name: ${{matrix.config.artifact}}.tar.gz
