--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,3 +47,9 @@ jobs:
       with:
         path: ${{github.workspace}}/build/vtc.tar.gz
         name: vtc.tar.gz
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      # if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: vtc.tar.gz
