--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -50,6 +50,6 @@ jobs:
 
     - name: Release
       uses: softprops/action-gh-release@v1
-      # if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: vtc.tar.gz
