update files section

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -53,4 +53,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: vtc.tar.gz
+        files: ${{github.workspace}}/build/vtc.tar.gz
